<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgVoltarLogin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="24sp"
            android:textColor="@color/green"
            android:textFontWeight="600"
            android:layout_marginTop="-32dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_logo"
            android:layout_gravity="end" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical"
            android:background="@drawable/style_input" />

        <EditText
            android:id="@+id/senhaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:background="@drawable/style_input" />

        <TextView
            android:id="@+id/txtEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="14sp"
            android:textColor="@color/green"
            android:layout_marginTop="8dp"
            android:layout_gravity="end" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp"
            android:background="@drawable/background_green_button" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/havent_account"
                android:textSize="14sp"
                android:textColor="#333" />

            <TextView
                android:id="@+id/cadastroLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_up"
                android:textSize="14sp"
                android:textColor="@color/green"
                android:layout_marginStart="4dp" />
        </LinearLayout>
</LinearLayout>
