<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgVoltar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-32dp"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textFontWeight="600"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="end"
            android:layout_marginTop="-60dp"/>

        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_input"
            android:hint="@string/company_name"/>

        <EditText
            android:id="@+id/enderecoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_input"
            android:hint="@string/adress" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_input"
            android:hint="@string/email"
            android:inputType="textPostalAddress"/>

        <EditText
            android:id="@+id/senhaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_input"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/confirmarSenhaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_input"
            android:hint="@string/confirm_password" />

        <EditText
            android:id="@+id/cnpjEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_input"
            android:hint="@string/cnpj"
            android:inputType="number" />

        <Button
            android:id="@+id/cadastrarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp"
            android:background="@drawable/background_green_button" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="Já tem uma conta? Faça login"
            android:textColor="@color/green" />

    </LinearLayout>
</ScrollView>
