<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/escrita"
        android:layout_marginTop="20dp"
        android:textFontWeight="600"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo" />

    <Button
        android:id="@+id/btRegisterWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_green_button"
        android:textColor="@color/white"
        android:text="@string/new_account"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btLoginWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_white_button"
        android:textColor="@color/green"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"/>


</LinearLayout>