<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgVoltar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-32dp"
            android:text="@string/settings"
            android:textColor="@color/green"
            android:textFontWeight="600"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="end"
            android:layout_marginTop="-60dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:text="@string/define_co_alert_level"
        android:textSize="18sp"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/coLimitInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_input"
        android:inputType="number"
        android:hint="@string/co_alert_level"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:background="@drawable/background_green_button"
        android:textColor="@color/white"
        android:layout_marginTop="445dp" />

</LinearLayout>
